--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="box">
     <div class="nav">
-        <ul class="nav-ul">
+        <ul class="nav-ul clearfix">
             <li class="nav-li1"><a class="nav-a1" href="mian-page.html" title="主站">主站</a></li>
             <li class="nav-li1"><a class="nav-a1" href="#" title="画友">画友</a></li>
             <li class="nav-li1 gc">
