--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <li class="nav-li1"><a class="nav-a1" href="#" title="移动端">移动端</a></li>
         </ul>
     </div>
+    <div class="logoAll">
     <a href="mian-page.html" class="logo"><img src="img/logo.webp"></a>
+    </div>
 </div>
 </body>
 <script src="js/mian-page.js"></script>
